--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       cli:
         description: Run by cypress command line
-        default: yarn cypress ruin
+        default: yarn cypress run
 
 jobs: 
   cypress-electron-tests:
