--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   cypress-e2e-electron:
     runs-on: ubuntu-latest
+    container: 
+     image: cypress/browsers:node18.12.0-chrome103-ff107
+     options: --user 1001
     steps:
       - name: Get code
         uses: actions/checkout@v3.5.2
@@ -21,6 +24,48 @@ jobs:
           browser: electron
           record: true
           group: UI Electron
+          spec: ${{ github.event.inputs.spec }}
+        env: 
+          CYPRESS_RECORD_KEY: 0c2c3a67-b24f-4035-acfc-b1a94c82541c
+          GITHUB_TOLEN: ${{ secrets.GITHUB_TOKEN}}
+  cypress-e2e-chrome:
+    needs: cypress-e2e-electron
+    runs-on: ubuntu-latest
+    container: 
+     image: cypress/browsers:node18.12.0-chrome103-ff107
+     options: --user 1001
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3.5.2
+        
+      - name: Cypreess run
+        uses: cypress-io/github-action@v5.7.2
+        with:
+          install-command: yarn install
+          browser: chrome
+          record: true
+          group: UI Chrome
+          spec: ${{ github.event.inputs.spec }}
+        env: 
+          CYPRESS_RECORD_KEY: 0c2c3a67-b24f-4035-acfc-b1a94c82541c
+          GITHUB_TOLEN: ${{ secrets.GITHUB_TOKEN}}
+  cypress-e2e-firefox:
+    needs: cypress-e2e-chrome
+    runs-on: ubuntu-latest
+    container: 
+     image: cypress/browsers:node18.12.0-chrome103-ff107
+     options: --user 1001
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3.5.2
+        
+      - name: Cypreess run
+        uses: cypress-io/github-action@v5.7.2
+        with:
+          install-command: yarn install
+          browser: firefox
+          record: true
+          group: UI Firefox
           spec: ${{ github.event.inputs.spec }}
         env: 
           CYPRESS_RECORD_KEY: 0c2c3a67-b24f-4035-acfc-b1a94c82541c
