--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -26,7 +26,7 @@ jobs:
           group: UI Electron
           spec: ${{ github.event.inputs.spec }}
         env: 
-          CYPRESS_RECORD_KEY: 0c2c3a67-b24f-4035-acfc-b1a94c82541c
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY}}
           GITHUB_TOLEN: ${{ secrets.GITHUB_TOKEN}}
   cypress-e2e-chrome:
     needs: cypress-e2e-electron
@@ -47,7 +47,7 @@ jobs:
           group: UI Chrome
           spec: ${{ github.event.inputs.spec }}
         env: 
-          CYPRESS_RECORD_KEY: 0c2c3a67-b24f-4035-acfc-b1a94c82541c
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY}}
           GITHUB_TOLEN: ${{ secrets.GITHUB_TOKEN}}
   cypress-e2e-firefox:
     needs: cypress-e2e-chrome
@@ -68,7 +68,7 @@ jobs:
           group: UI Firefox
           spec: ${{ github.event.inputs.spec }}
         env: 
-          CYPRESS_RECORD_KEY: 0c2c3a67-b24f-4035-acfc-b1a94c82541c
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY}}
           GITHUB_TOLEN: ${{ secrets.GITHUB_TOKEN}}
           
       
